# gesaula

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows.yml  release.yml
docs/: arquitectura.md  desarrollo.md
packaging/debian/: control.in  gesaula.desktop
scripts/: build_deb.sh  build_windows.ps1
src/gesaula/: README_INSTALACION.md  __init__.py  app.py  main.py  resources.py
src/gesaula/actions/: __init__.py  base.py  calificaciones_ods.py  guardar_cuestionarios.py  guardar_tareas.py  listar_cursos.py
src/gesaula/config/: __init__.py  settings.py  storage.py
src/gesaula/moodle/: __init__.py  client.py  errors.py  http_client.py  models.py  parsers.py
src/gesaula/security/: __init__.py  credentials.py
src/gesaula/ui/: __init__.py  course_detail_panel.py  courses_panel.py  exam_storage_panel.py  grades_dialog.py  level_up_panel.py  login_panel.py  main_window.py  workers.py
tests/: test_actions.py  test_calificaciones_ods.py  test_config.py  test_guardar_cuestionarios.py  test_guardar_tareas.py  test_moodle_client.py  test_moodle_parsers.py  test_workers.py
